# zsh-mouse-and-flex-search

./: .gitignore  README.md  pyproject.toml  zsh-flex-history.zsh
Formula/: zsh-flex-history.rb
src/zsh_flex_history/: cli.py  import_history.py  init_zsh.py
