[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zsh-flex-history"
version = "0.1.0"
description = "Interactive zsh history search with flex matching and mouse support"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "uAlexk" }
]

[project.scripts]
zsh-flex-history = "zsh_flex_history.cli:main"
zsh-flex-history-import = "zsh_flex_history.import_history:main"
zsh-flex-history-init-zsh = "zsh_flex_history.init_zsh:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
